refactor: move mapper adapter to mapper module (#16629)